--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,5 +33,5 @@ jobs:
     # Report to Slack if response is non-200 or incorrect body
     - name: Send Slack Notification if failed
       if: steps.http_request.outputs.status == 'failed'
-      shell: |
+      run: |
           curl -X POST -H 'Content-type: application/json' --data '{"text":"Hello, World!"}'  ${{ secrets.SLACK_URL }}
