--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,4 +34,4 @@ jobs:
     - name: Send Slack Notification if failed
       if: steps.http_request.outputs.status == 'failed'
       run: |
-          curl -X POST -H 'Content-type: application/json' --data '{"text":"Hello, World!"}'  ${{ secrets.SLACK_URL }}
+          curl -X POST -H 'Content-type: application/json' --data '{"text":"Way today failed"}'  ${{ secrets.SLACK_URL }}
