--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Monitor Server Status
 on:
   schedule:
     # Runs every hour
-    - cron: '0 * * * *'
+    - cron: '0 */6 * * *'
   workflow_dispatch:  # Allows manual triggering as well
 
 jobs:
